@@ -178,6 +178,7 @@ with all sufficient information, see the ChangeLog file.
     * Matrix#each and #each_with_index can iterate on a subset of the elements
     * Matrix#find_index returns [row, column] and can iterate on a subset
       of the elements
+    * Matrix#** implements Numeric exponents (using the eigensystem)
     * Matrix.zero can build rectangular matrices
 
 * net/http
